Update visual appearance on desktop; remove needless and undesirable border around map header. Place timeline in map with prominent year indicator (needs fix as it still looks uneven).

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -29,6 +29,10 @@ Z-index is reserved as such:
 	margin: 0 0 12px 0;
 }
 
+.min-w-100 {
+	min-width: 100%;
+}
+
 .center {
 	text-align: center;
 }
